# bake-a-py

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeql-analysis.yml  publish-package.yml
src/bakeapy/: cli.py
src/chelone/: __init__.py  __main__.py  cli.py
tests/: test_pkg_import.py
